--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     "webpack-cli": "3.3.12"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "webpack mode --development",
+    "build": "webpack --mode production",
+    "start": "webpack-dev-server --mode development --open",
+    "lint": "npx stylelint '**/*.{css,scss}' --fix && npx eslint . --fix"
   },
   "repository": {
     "type": "git",
