--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "stylelint-scss": "3.17.2"
   },
   "devDependencies": {
+    "jest": "26.4.2",
     "webpack": "4.44.1",
     "webpack-cli": "3.3.12"
   },
