--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "webpack-cli": "3.3.12"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "dev": "webpack mode --development",
     "build": "webpack --mode production",
     "start": "webpack-dev-server --mode development --open",
