--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "description": "This project demonstrates testing JavaScript files using Jest.",
   "main": "index.js",
   "dependencies": {
-    "eslint-config-airbnb-base": "14.1.0",
-    "eslint": "6.8.0",
-    "eslint-plugin-import": "2.20.2",
     "stylelint": "13.3.3",
     "stylelint-config-standard": "20.0.0",
     "stylelint-csstree-validator": "1.8.0",
     "stylelint-scss": "3.17.2"
   },
   "devDependencies": {
+    "eslint": "6.8.0",
+    "eslint-config-airbnb-base": "14.1.0",
+    "eslint-plugin-import": "2.20.2",
     "jest": "26.4.2",
     "webpack": "4.44.1",
     "webpack-cli": "3.3.12"
@@ -22,7 +22,7 @@
     "dev": "webpack mode --development",
     "build": "webpack --mode production",
     "start": "webpack-dev-server --mode development --open",
-    "lint": "npx stylelint '**/*.{css,scss}' --fix && npx eslint . --fix"
+    "lint": "npx eslint . --fix"
   },
   "repository": {
     "type": "git",
