--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "stylelint-scss": "3.17.2"
   },
   "devDependencies": {
+    "@babel/preset-env": "7.11.0",
     "eslint": "6.8.0",
     "eslint-config-airbnb-base": "14.1.0",
     "eslint-plugin-import": "2.20.2",
